--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@
 
 :root{
     --clr-primary: #EE502E;
+    --clr-secondary: #455A64;
     --bg-primary: #E4E3E1;
 }
 
@@ -31,9 +32,9 @@ body{
 }
 
 .img-and-info__title{
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     line-height: 1.2;
-    color: #455A64;
+    color: var(--clr-secondary);
 }
 .img-and-info__title strong{
     color: var(--clr-primary);
@@ -41,7 +42,7 @@ body{
 
 .img-and-info__paragrafo{
     font-size: 1rem;
-    color: #455A64;
+    color: var(--clr-secondary);
     margin-top: 2rem;
 }
 
@@ -72,11 +73,10 @@ body{
     color: white!important;
 }
 
-
 .img-and-info img{
-    width: 500px;
-    height: 500px;
-
+    max-width: 100%;
+    width: 700px;
+    height: auto;
 }
 
 /* Serivices info */
@@ -87,7 +87,7 @@ body{
 .services-title-and-info{
     display: flex;
     gap: 50px;
-    padding: 50px 0;
+    padding: 100px 0;
 }
 
 .services-title-and-info__img{
@@ -97,7 +97,13 @@ body{
 .services-title-and-info__title{
     font-size: 2.5rem;
     line-height: 1.2;
-    color: #455A64;
+    color: var(--clr-secondary);
+}
+
+.services-title-and-info__paragrafo{
+    font-size: .9rem;
+    margin-top: 1rem;
+    color: var(--clr-secondary);
 }
 
 .services-title-and-info__container{
@@ -142,5 +148,5 @@ body{
 .services-title-and-info__container__info-paragrafo{
     margin-top: .5rem;
     font-size: 1rem;
-    color: #455A64;
+    color: var(--clr-secondary);
 }
