--- a/styles/header.css
+++ b/styles/header.css
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
     width: 80%;
+    max-width: 1400px;
     margin: 10px auto;
     background-color: rgba(255, 255, 255, 0.5);
     border: 2px solid rgba(255, 255, 255, 0.5);
