--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,7 @@ body{
 
 .container{
     width: 80%;
+    max-width: 1400px;
     margin: 50px auto;
     display: flex;
     justify-content: space-between;
@@ -167,29 +168,29 @@ body{
     font-size: 1rem;
     color: var(--clr-secondary);
     width: 550px;
-    margin: 2rem auto;
+    margin: 3rem auto;
 }
 
 .why-choose__container{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 25px;
     flex-wrap: wrap;
 }
 
 .why-choose__container__info{
-    width: 300px;
-    height: 260px;
+    width: 330px;
+    height: 280px;
     padding: 20px;
     background-color: rgba(255, 255, 255, .9);
     border-radius: 8px;
     text-align: start;
-    transition: .5s;
+    transition: .4s;
 }
 
 .why-choose__container__info:hover{
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 }
 
 .why-choose__container__info-icon{
@@ -287,6 +288,35 @@ body{
     width: 700px;
 }
 
+.card-and-title__title-and-btns{
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center; 
+    width: 100%;
+}
+
+.group-btns {
+    display: flex;
+    margin-right: 2px;
+    gap: 25px;
+}
+
+.group-btns button {
+    background-color: var(--clr-primary);
+    cursor: pointer;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.group-btns button i{
+    font-size: .6rem;
+}
 
 .card-and-title__title{
     margin-bottom: 30px;
