--- a/styles/style.css
+++ b/styles/style.css
@@ -277,7 +277,7 @@ body{
 }
 
 .container-card-and-title__img{
-    width: 550px; 
+    width: 500px; 
     height: auto;
 }
 
@@ -330,6 +330,11 @@ body{
     padding: 10px 20px;
     border-radius: 8px;
     border-left: 20px solid var(--clr-primary);
+    transition: .4s;
+}
+
+.card-and-title__card:hover{
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 }
 
 .card-and-title__card h2{
@@ -380,3 +385,174 @@ body{
     width: 40px;
     border-radius: 50%;
 }
+
+
+
+/* Cards and circle */
+.cards-and-circle{
+    width: 100%; 
+    height: auto; 
+    padding: 120px 0; 
+    background-color: #24273A; 
+    position: relative; 
+}
+
+.cards-and-circle__circle{
+    position: absolute;
+    height: 380px;
+    width: 900px; 
+    background: linear-gradient(135deg, #f08a7d 0%, #921b1e 100%);
+    /* background: linear-gradient(135deg, #e36b5b 0%, #921b1e 100%); */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-10deg);
+    border-radius: 50%;
+}
+
+.cards-and-circle__cards{
+    width: 80%; 
+    max-width: 1400px; 
+    margin: 0 auto; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    gap: 80px;
+}
+
+
+.cards-and-circle__cards-column{
+    display: flex; 
+    flex-direction: column; 
+    gap: 50px;
+}
+
+.card{
+    width: 320px;
+    height: auto;
+    min-height: 320px;
+    z-index: 10;
+    color: white;
+    padding: 30px 20px 10px 20px;
+    border-radius: 14px;
+    background-color: transparent;
+    backdrop-filter: blur(55px);
+    border: 3px solid rgba(255, 255, 255, 0.1);
+    transition: .4s;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card:hover{
+    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    transform: scale(1.02);
+}
+
+.card h2{
+    font-size: 1.7rem;
+}
+
+.card p{
+    font-size: .9rem;
+    line-height: 1.2;
+    color: rgba(255, 255, 255, .8);
+}
+
+.card img{
+    width: 70px;
+    border-radius: 50%;
+}
+
+
+/* Dúvidas frequentes */
+.frequently-questions{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 50px 0;
+}
+
+.frequently-questions img{
+    width: 300px;
+    height: auto;
+}
+
+.frequently-questions__title{
+    font-size: 3.5rem;
+    color: var(--clr-primary);
+    margin-top: 10px;
+}
+
+.frequently-questions__paragrafo{
+    font-size: 1.2rem;
+    color: var(--clr-secondary);
+    font-weight: 700;
+}
+
+.frequently-questions__container{
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+}
+
+
+.frequently-questions__container__question{
+    width: 100%;    
+    max-height: 77px;
+    padding: 20px;
+    border: 2px solid rgba(0, 0, 0, .1);
+    border-radius: 12px;
+    transition: max-height .5s;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.frequently-questions__container__question:hover{
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+}
+
+.frequently-questions__container__question__title-and-icon{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+}
+
+.frequently-questions__container__question__title-and-icon h3{
+    font-size: 1.3rem;
+    color: var(--clr-secondary);
+    cursor: pointer;
+}
+
+.frequently-questions__container__question__title-and-icon button{
+    width: 30px;
+    height: 30px;
+    background-color: var(--clr-primary);
+    color: white;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+}
+
+.frequently-questions__container__question p{
+    font-size: 1rem;
+    color: rgba(0, 0, 0, .8);
+    margin-top: 1rem;
+    width: 90%;
+}
+
+.frequently-questions__container__question.active{
+    max-height: 1000px;
+}
+
+.frequently-questions__container__question button{
+    transition: .5s;
+}
+
+.frequently-questions__container__question.active button{
+    transform: rotate(90deg);
+}
+
