--- a/styles/style.css
+++ b/styles/style.css
@@ -553,6 +553,13 @@ body{
 }
 
 .frequently-questions__container__question.active button{
-    transform: rotate(90deg);
+    transform: rotate(-90deg);
+}
+
+
+/* Footer */
+footer{
+    background-color: #fff;
+    padding: 50px 0;
 }
 
