--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
 @import url('header.css');
+@import url('img-and-info.css');
+@import url('services.css');
 *{
     margin: 0;
     padding: 0;
@@ -27,130 +29,6 @@ body{
     gap: 20px;
 }
 
-/* Image and info */
-.img-and-info{
-    height: 80vh;
-}
-
-.img-and-info__title{
-    font-size: 3.5rem;
-    line-height: 1.2;
-    color: var(--clr-secondary);
-}
-.img-and-info__title strong{
-    color: var(--clr-primary);
-}
-
-.img-and-info__paragrafo{
-    font-size: 1rem;
-    color: var(--clr-secondary);
-    margin-top: 2rem;
-}
-
-.img-and-info__btns{
-    margin-top: 1rem;
-    display: flex;
-    gap: 20px;
-}
-
-.img-and-info__btns button{
-    padding: 10px 25px;
-    border-radius: 4px;
-    border: none;
-    background-color: var(--clr-primary);
-    color: white;
-    cursor: pointer;
-}
-
-.outline{
-    background-color: transparent!important;
-    border: 1px solid var(--clr-primary)!important;
-    color: var(--clr-primary)!important;
-    transition: .5s;
-}
-
-.outline:hover{
-    background-color: var(--clr-primary)!important;
-    color: white!important;
-}
-
-.img-and-info img{
-    max-width: 100%;
-    width: 700px;
-    height: auto;
-}
-
-/* Serivices info */
-.services{
-    background-color: white;
-}
-
-.services-title-and-info{
-    display: flex;
-    gap: 50px;
-    padding: 100px 0;
-}
-
-.services-title-and-info__img{
-    width: 500px;
-}
-
-.services-title-and-info__title{
-    font-size: 2.5rem;
-    line-height: 1.2;
-    color: var(--clr-secondary);
-}
-
-.services-title-and-info__paragrafo{
-    font-size: .9rem;
-    margin-top: 1rem;
-    color: var(--clr-secondary);
-}
-
-.services-title-and-info__container{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    gap: 26px;
-}
-
-.services-title-and-info__container__info{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 16px;
-}
-
-.services-title-and-info__container__info-icon{
-    width: 6rem;
-    height: 3rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--clr-primary);
-    border-radius: 4px;
-    color: white;
-    flex-shrink: 0;
-    transition: .5s;
-}
-
-.services-title-and-info__container__info:hover .services-title-and-info__container__info-icon{
-    background-color: white;
-    color: var(--clr-primary);
-    border: 1px solid var(--clr-primary);
-    transform: scale(1.1);
-}
-
-.services-title-and-info__container__info-subtitle{
-    font-size: 1.8rem;
-    line-height: 1.1;
-}
-
-.services-title-and-info__container__info-paragrafo{
-    margin-top: .5rem;
-    font-size: 1rem;
-    color: var(--clr-secondary);
-}
 
 .why-choose{
     margin: 70px auto;
