refactor: estilização das sections adicionadas em arquivos css separados + footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,11 @@
 @import url('header.css');
 @import url('img-and-info.css');
 @import url('services.css');
+@import url('why-choose-us.css');
+@import url('services-cards.css');
+@import url('faq.css');
+@import url('footer.css');
+
 *{
     margin: 0;
     padding: 0;
@@ -30,414 +35,4 @@ body{
 }
 
 
-.why-choose{
-    margin: 70px auto;
-    text-align: center;
-    position: relative;
-    width: 100%;
-}
-
-.why-choose__title{
-    font-size: 2.5rem;
-    color: var(--clr-secondary);
-}
-
-.why-choose__paragrafo{
-    font-size: 1rem;
-    color: var(--clr-secondary);
-    width: 550px;
-    margin: 3rem auto;
-}
-
-.why-choose__container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 25px;
-    flex-wrap: wrap;
-}
-
-.why-choose__container__info{
-    width: 330px;
-    height: 280px;
-    padding: 20px;
-    background-color: rgba(255, 255, 255, .9);
-    border-radius: 8px;
-    text-align: start;
-    transition: .4s;
-}
-
-.why-choose__container__info:hover{
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-}
-
-.why-choose__container__info-icon{
-    width: 70px;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F8F8F8;
-    border-radius: 4px;
-}
-
-.why-choose__container__info__text{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-}
-
-.why-choose__container__info h3{
-    font-size: 1.1rem;
-    margin-top: .9rem;
-}
-
-.why-choose__container__info p{
-    font-size: 1rem;
-    color: var(--clr-secondary);
-    width: 100%;
-    margin-top: 1rem;
-    line-height: 1.3;
-}
-
-.triangle{
-    width: 0;
-    height: 0;
-    border-left: 30px solid transparent;
-    border-right: 30px solid transparent;
-    border-bottom: 60px solid #FFA6E1;
-    position: absolute;
-    transform: rotate(35deg);
-    right: 10%;
-    top: -75px;
-    z-index: -1;
-}
-
-.trinagle-gray{
-    border-left: 25px solid transparent;
-    border-right: 25px solid transparent;
-    border-bottom: 55px solid #ECECEC;
-    transform: rotate(45deg);
-    top: 10px;
-    right: 15%;
-}
-
-.virus{
-    position: absolute;
-    top: -60px;
-    left: 0;
-}
-
-.virus img{
-    width: 200px;
-}
-
-.triangle-orange{
-    border-bottom: 55px solid #eb6a4d;
-    transform: rotate(45deg);
-}
-
-.triangle-orange__shadow{
-    border-bottom: 50px solid rgba(238, 80, 46, .3);
-    transform: rotate(45deg);
-    right: 11%;
-    top: -58px;
-    z-index: -4;
-
-}
-
-.container-card-and-title{
-    display: flex; 
-    justify-content: space-between; 
-    gap: 10px; 
-    margin-top: 200px; 
-    position: relative;
-}
-
-.container-card-and-title__img{
-    width: 500px; 
-    height: auto;
-}
-
-.card-and-title{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    width: 700px;
-}
-
-.card-and-title__title-and-btns{
-    display: flex; 
-    justify-content: space-between; 
-    align-items: center; 
-    width: 100%;
-}
-
-.group-btns {
-    display: flex;
-    margin-right: 2px;
-    gap: 25px;
-}
-
-.group-btns button {
-    background-color: var(--clr-primary);
-    cursor: pointer;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.group-btns button i{
-    font-size: .6rem;
-}
-
-.card-and-title__title{
-    margin-bottom: 30px;
-    color: var(--clr-secondary);
-    font-size: 2.3rem;
-    
-}
-.card-and-title__card{
-    background-color: white;
-    text-align: start;
-    padding: 10px 20px;
-    border-radius: 8px;
-    border-left: 20px solid var(--clr-primary);
-    transition: .4s;
-}
-
-.card-and-title__card:hover{
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-}
-
-.card-and-title__card h2{
-    color: var(--clr-primary);
-    margin-bottom: .8rem;
-}
-
-.card-and-title__card p{
-    color: var(--clr-secondary);
-    font-size: .9rem;
-    line-height: 1.2;
-}
-
-.stars-and-person{
-    margin-top: 35px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-.stars-and-person__stars{
-    color: var(--clr-primary);
-}
-
-.stars-and-person__person{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.stars-and-person__person-info{
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-}
-
-.stars-and-person__person-info p:first-child{
-    color: var(--clr-secondary);
-    font-weight: bold;
-}
-
-.stars-and-person__person-user{
-    border-radius: 50%;
-}
-
-.stars-and-person__person-user img{
-    width: 40px;
-    border-radius: 50%;
-}
-
-
-
-/* Cards and circle */
-.cards-and-circle{
-    width: 100%; 
-    height: auto; 
-    padding: 120px 0; 
-    background-color: #24273A; 
-    position: relative; 
-}
-
-.cards-and-circle__circle{
-    position: absolute;
-    height: 380px;
-    width: 900px; 
-    background: linear-gradient(135deg, #f08a7d 0%, #921b1e 100%);
-    /* background: linear-gradient(135deg, #e36b5b 0%, #921b1e 100%); */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-10deg);
-    border-radius: 50%;
-}
-
-.cards-and-circle__cards{
-    width: 80%; 
-    max-width: 1400px; 
-    margin: 0 auto; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    gap: 80px;
-}
-
-
-.cards-and-circle__cards-column{
-    display: flex; 
-    flex-direction: column; 
-    gap: 50px;
-}
-
-.card{
-    width: 320px;
-    height: auto;
-    min-height: 320px;
-    z-index: 10;
-    color: white;
-    padding: 30px 20px 10px 20px;
-    border-radius: 14px;
-    background-color: transparent;
-    backdrop-filter: blur(55px);
-    border: 3px solid rgba(255, 255, 255, 0.1);
-    transition: .4s;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.card:hover{
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    transform: scale(1.02);
-}
-
-.card h2{
-    font-size: 1.7rem;
-}
-
-.card p{
-    font-size: .9rem;
-    line-height: 1.2;
-    color: rgba(255, 255, 255, .8);
-}
-
-.card img{
-    width: 70px;
-    border-radius: 50%;
-}
-
-
-/* Dúvidas frequentes */
-.frequently-questions{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    padding: 50px 0;
-}
-
-.frequently-questions img{
-    width: 300px;
-    height: auto;
-}
-
-.frequently-questions__title{
-    font-size: 3.5rem;
-    color: var(--clr-primary);
-    margin-top: 10px;
-}
-
-.frequently-questions__paragrafo{
-    font-size: 1.2rem;
-    color: var(--clr-secondary);
-    font-weight: 700;
-}
-
-.frequently-questions__container{
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: 100%;
-}
-
-
-.frequently-questions__container__question{
-    width: 100%;    
-    max-height: 77px;
-    padding: 20px;
-    border: 2px solid rgba(0, 0, 0, .1);
-    border-radius: 12px;
-    transition: max-height .5s;
-    overflow: hidden;
-    transition: .5s;
-}
-
-.frequently-questions__container__question:hover{
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-}
-
-.frequently-questions__container__question__title-and-icon{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-}
-
-.frequently-questions__container__question__title-and-icon h3{
-    font-size: 1.3rem;
-    color: var(--clr-secondary);
-    cursor: pointer;
-}
-
-.frequently-questions__container__question__title-and-icon button{
-    width: 30px;
-    height: 30px;
-    background-color: var(--clr-primary);
-    color: white;
-    cursor: pointer;
-    border: none;
-    border-radius: 50%;
-}
-
-.frequently-questions__container__question p{
-    font-size: 1rem;
-    color: rgba(0, 0, 0, .8);
-    margin-top: 1rem;
-    width: 90%;
-}
-
-.frequently-questions__container__question.active{
-    max-height: 1000px;
-}
-
-.frequently-questions__container__question button{
-    transition: .5s;
-}
-
-.frequently-questions__container__question.active button{
-    transform: rotate(-90deg);
-}
-
-
-/* Footer */
-footer{
-    background-color: #fff;
-    padding: 50px 0;
-}
 
