--- a/styles/faq.css
+++ b/styles/faq.css
@@ -1,4 +1,3 @@
-
 .faq{
     display: flex;
     flex-direction: column;
@@ -32,37 +31,32 @@
     width: 100%;
 }
 
-
 .faq__question{
     width: 100%;    
-    max-height: 77px;
+    max-height: 75px;
+    transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
+    overflow: hidden;
     padding: 20px;
     border: 2px solid rgba(0, 0, 0, .1);
     border-radius: 12px;
-    transition: max-height .5s;
-    overflow: hidden;
-    transition: .5s;
+}
+
+.faq__question.active{
+    max-height: 1000px;
+    transition: max-height 1s ease-in-out;
+}
+
+.faq__question.active button{
+    transform: rotate(-90deg);
 }
 
 .faq__question:hover{
     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
 }
 
-
 .faq__question button{
     transition: .5s;
 }
-
-
-.faq__question.active{
-    max-height: 1000px;
-}
-
-
-.faq__question.active button{
-    transform: rotate(-90deg);
-}
-
 
 .faq__question-header{
     display: flex;
