--- a/styles/img-and-info.css
+++ b/styles/img-and-info.css
@@ -3,7 +3,7 @@
 }
 
 .img-and-info__title {
-    font-size: 3.5rem;
+    font-size: 2.7rem;
     line-height: 1.2;
     color: var(--clr-secondary);
 }
@@ -15,7 +15,7 @@
 .img-and-info__paragrafo {
     font-size: 1rem;
     color: var(--clr-secondary);
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 .img-and-info__btns {
@@ -49,4 +49,57 @@
     max-width: 100%;
     width: 700px;
     height: auto;
+}
+
+
+/* Reponsive */
+@media screen and (max-width: 1400px) {
+    .img-and-info {
+        height: auto;
+        padding: 100px 0;
+    }
+
+    .img-and-info__title {
+        font-size: 2.5rem;
+    }
+
+    .img-and-info img {
+        width: 500px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .img-and-info img {
+        width: 400px;
+    }
+
+    .img-and-info__title {
+        font-size: 2rem;
+    }
+
+    .img-and-info__paragrafo {
+        font-size: 0.9rem;
+    }
+}
+
+
+@media screen and (max-width: 992px) {
+    .img-and-info{
+        display: flex;
+        flex-direction: column;
+        padding: 10px 0;
+    }
+
+    .img-and-info img {
+        width: 600px;
+    }
+
+    .img-and-info__title {
+        font-size: 2.5rem;
+    }
+
+    .img-and-info__paragrafo {
+        font-size: 1rem;
+        margin-top: 1rem;
+    }
 }
