--- a/styles/services-cards.css
+++ b/styles/services-cards.css
@@ -4,6 +4,7 @@
     padding: 120px 0; 
     background-color: #24273A; 
     position: relative; 
+    overflow: hidden;
 }
 
 .circle-decoration{
@@ -30,13 +31,16 @@
 
 
 .column-cards{
+    width: auto;
     display: flex; 
     flex-direction: column; 
+    align-items: center;
     gap: 50px;
 }
 
 .service-card{
     width: 320px;
+    max-width: 80%;
     height: auto;
     min-height: 320px;
     z-index: 10;
@@ -70,4 +74,34 @@
 .service-card img{
     width: 70px;
     border-radius: 50%;
+}
+
+.column-cards .service-card{
+    max-width: 100%;   
+}
+
+@media screen and (max-width: 1250px){
+    .cards-container{
+        gap: 40px;
+    }
+}
+
+@media screen and (max-width: 1100px){
+    .cards-container{
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    .column-cards{
+        width: 80%;
+    }
+
+    .service-card{
+        width: 320px;
+    }
+
+    .service-card h2{
+        font-size: 1.5rem;
+        line-height: 1.2;
+    }
 }
