--- a/styles/services.css
+++ b/styles/services.css
@@ -2,6 +2,10 @@
     background-color: white;
 }
 
+.services__container{
+    width: 100%;
+}
+
 .services-title-and-info {
     display: flex;
     gap: 50px;
@@ -10,6 +14,7 @@
 
 .services-title-and-info__img {
     width: 500px;
+    max-width: 100%;
 }
 
 .services-title-and-info__title {
