--- a/styles/style.css
+++ b/styles/style.css
@@ -34,3 +34,10 @@ body{
     gap: 20px;
 }
 
+
+/* Responsive */
+@media screen and (max-width: 768px){
+    .container{
+        width: 90%;
+    }
+}
