--- a/styles/footer.css
+++ b/styles/footer.css
@@ -96,3 +96,38 @@ footer{
     font-size: 0.9rem;
     color: var(--clr-secondary);
 }
+
+
+/* Reponsive */
+@media screen and (max-width: 992px) {
+    .footer__container{
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .footer__section{
+        text-align: center;
+    }
+
+    .footer__list-item{
+        width: 100%;
+    }
+
+    .footer__social-icons{
+        flex-direction: row;
+        justify-content: center;
+        gap: 10px;
+    }
+}
+
+
+@media screen and (max-width: 576px) {
+    .footer__social-icons{
+        flex-direction: column;
+        align-items: center;
+    }
+  
+}
+
+
+
