--- a/styles/services-cards.css
+++ b/styles/services-cards.css
@@ -87,6 +87,11 @@
 }
 
 @media screen and (max-width: 1100px){
+    .services-cards{
+        padding: 80px 0;
+    }
+
+
     .cards-container{
         flex-direction: column;
         gap: 50px;
