--- a/styles/faq.css
+++ b/styles/faq.css
@@ -1,9 +1,21 @@
+.line-top{
+    width: 3000px;
+    height: 300px;
+    background-color: #111827;
+    border: 8px solid #0067FF;
+    position: absolute;
+    top: -300px;
+    left: -500px;
+    transform: rotate(-3deg);
+    z-index: -1;
+}
+
 .faq{
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 50px 0;
+    padding: 100px 0 50px 0;
 }
 
 .faq img{
@@ -94,7 +106,7 @@
 /* Responsive */
 @media screen and (max-width: 768px){
     .faq{
-        padding: 20px 0;
+        padding: 100px 0 20px 0;
     }
 
     .faq__title{
@@ -107,10 +119,6 @@
         font-size: 1.1rem;
         margin-top: 5px;
         text-align: center;
-    }
-
-    .faq__question-header{
-        align-items: start;
     }
 
     .faq__question-header h3{
