--- a/styles/style.css
+++ b/styles/style.css
@@ -15,13 +15,18 @@
 }
 
 :root{
-    --clr-primary: #EE502E;
-    --clr-secondary: #455A64;
-    --bg-primary: #E4E3E1;
+    --clr-primary: #0067FF;
+    --clr-secondary: #111827;
+    --bg-primary: #E8EDF5;
+}
+
+html{
+    overflow-x: hidden;
 }
 
 body{
     background-color: var(--bg-primary);
+    overflow-x: hidden
 }
 
 .container{
@@ -32,6 +37,7 @@ body{
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+    position: relative;
 }
 
 
