--- a/styles/faq.css
+++ b/styles/faq.css
@@ -103,7 +103,7 @@
     width: 90%;
 }
 
-/* Responsive */
+/* Breakpoints */
 @media screen and (max-width: 768px){
     .faq{
         padding: 100px 0 20px 0;
