--- a/styles/services-cards.css
+++ b/styles/services-cards.css
@@ -19,6 +19,14 @@
     border-radius: 50%;
 }
 
+.services-cards__img{
+    width: 350px; 
+    height: auto;
+    position: absolute; 
+    bottom: -50px; 
+    right: 0;
+}
+
 .cards-container{
     width: 80%; 
     max-width: 1400px; 
@@ -42,7 +50,7 @@
     width: 320px;
     max-width: 80%;
     height: auto;
-    min-height: 320px;
+    min-height: 280px;
     z-index: 10;
     color: white;
     padding: 30px 20px 10px 20px;
@@ -53,7 +61,7 @@
     transition: .4s;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    gap: 20px;
 }
 
 .service-card:hover{
@@ -63,6 +71,7 @@
 
 .service-card h2{
     font-size: 1.7rem;
+    line-height: 1.1;
 }
 
 .service-card p{
@@ -80,6 +89,7 @@
     max-width: 100%;   
 }
 
+/* Breakpoints */
 @media screen and (max-width: 1250px){
     .cards-container{
         gap: 40px;
@@ -87,6 +97,10 @@
 }
 
 @media screen and (max-width: 1100px){
+    .services-cards__img{
+        width: 300px;
+    }
+
     .services-cards{
         padding: 80px 0;
     }
@@ -108,5 +122,12 @@
     .service-card h2{
         font-size: 1.5rem;
         line-height: 1.2;
+    }
+}
+
+
+@media screen and (max-width: 768px){
+    .services-cards__img{
+        display: none;
     }
 }
