--- a/styles/why-choose-us.css
+++ b/styles/why-choose-us.css
@@ -27,30 +27,31 @@
 
 .why-choose-us__feature{
     width: 330px;
-    min-height: 280px;
+    min-height: 380px;
     height: auto;
-    padding: 20px;
+    padding: 0 0 20px 0;
     background-color: rgba(255, 255, 255, .9);
     border-radius: 8px;
     text-align: start;
     transition: .4s;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    overflow: hidden;
 }
 
 .why-choose-us__feature:hover{
     box-shadow: 0 0 10px rgba(0, 0, 0, .2);
 }
 
-.why-choose-us__icon{
-    width: 70px;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F8F8F8;
-    border-radius: 4px;
+.why-choose-us__img{
+    width: 100%;
+    height: auto;
+    filter: brightness(60%)
 }
 
 .why-choose-us__text{
+    padding: 0 20px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -66,7 +67,6 @@
     width: 100%;
     line-height: 1.3;
 }
-
 
 /* Decorations */
 .why-choose-us__decoration--triangle, .testimonials__decoration{
@@ -248,7 +248,7 @@
     z-index: -1;
 }
 
-/* Responsive */
+/* Breakpoints */
 @media screen and (max-width: 1250px){
     .why-choose-us{
         margin: 0 auto;
@@ -320,7 +320,6 @@
         border-bottom: 40px solid rgba(238, 80, 46, .3);
     }
 }
-
 
 @media screen and (max-width: 768px){
     .why-choose-us__title{
