--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Kanit', sans-serif;
+    scroll-behavior: smooth;
 }
 
 :root{
@@ -26,7 +27,7 @@ html{
 
 body{
     background-color: var(--bg-primary);
-    overflow-x: hidden
+    overflow-x: hidden;
 }
 
 .container{
