--- a/styles/footer.css
+++ b/styles/footer.css
@@ -44,6 +44,12 @@ footer{
     width: fit-content;
 }
 
+.footer__list-item a{
+    text-decoration: none;
+    color: #fff;
+}
+
+
 .footer__list-item::after{
     content: '';
     width: 0;
@@ -109,8 +115,14 @@ footer{
         text-align: center;
     }
 
+    .footer__list{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
     .footer__list-item{
-        width: 100%;
+        width: fit-content;
     }
 
     .footer__social-icons{
@@ -126,5 +138,4 @@ footer{
         flex-direction: column;
         align-items: center;
     }
-  
 }
