--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,13 @@
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    transition: background-image 0.3s ease;
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.3), transparent);
+
+}
 
 .header-container {
     display: flex;
@@ -6,8 +16,8 @@
     width: 80%;
     max-width: 1400px;
     margin: 10px auto;
-    background-color: rgba(255, 255, 255, 0.5);
-    border: 2px solid rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.7);
+    border: 2px solid rgba(255, 255, 255, 0.9);
     padding: 4px 25px;
     border-radius: 50px;
     font-size: 0.9rem;
@@ -108,7 +118,7 @@
 }
 
 /* Breakpoints */
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 935px) {
     .header-container {
         padding: 4px 10px;
     }
@@ -118,7 +128,7 @@
     }
 
     .navigation-menu {
-        gap: 10px;
+        gap: 15px;
     }
 }
 
@@ -126,9 +136,7 @@
     .header-container{
         width: 90%;
     }
-}
 
-@media screen and (max-width: 576px) {
     .navigation-menu{
         display: none;
     }
